fix: correct broken layout of cart and favorite pages

--- a/src/app/components/cart/cart.component.less
+++ b/src/app/components/cart/cart.component.less
@@ -180,9 +180,10 @@ input[type="submit"]:hover {
 }
 
 .order-sent {
-  margin-top: 10px;
+  margin-top: 20px;
   color: #126112;
   text-shadow: 0 0 5px #224e31;
+  text-align: center;
 }
 
 @media screen and (max-width: 760px) {
