--- a/src/styles.less
+++ b/src/styles.less
@@ -12,7 +12,6 @@ html {
 
 body {
   position: relative;
-  display: flex;
 }
 
 body,
